force-app/main/default/objects/PayReqCash__c/PayReqCash__c.object-meta.xml
<CustomObject>
    <label>TRX Plan+Cash</label>
    <nameField>
        <displayFormat>PRCA-{000000}</displayFormat>
        <label>TRX PLAN+CASH ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TRX Plan+Cash</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>