force-app/main/default/objects/PayReqCash__c/fields/AmountPaidLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidLocalFormula__c</fullName>
    <formula>CashID__r.ACTUAL_PAID_TO_VENDOR__c</formula>
    <label>Amount Paid(Local)-Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>