force-app/main/default/objects/PayReqCash__c/fields/AmountReceivedLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedLocalFormula__c</fullName>
    <formula>CashID__r.ActualAmountCollected__c</formula>
    <label>Amount Received(Local)-Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>