force-app/main/default/objects/PayReqCash__c/fields/AmountReceivedLocalforTrx_Plan__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedLocalforTrx_Plan__c</fullName>
    <label>Amount Received(Local) for Trx Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>